--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ##spring.datasource.url=jdbc:mysql://172.17.0.2:3306/washerdb?serverTimezone=America/Bogota
 spring.datasource.url=jdbc:mysql://localhost:3306/washerdb?serverTimezone=America/Bogota
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=pmauser
+spring.datasource.password=123456
 
 tittle=Shoes Washer Co.
 design=ShoeWasherCo 
